--- a/themes/stack/config.yaml
+++ b/themes/stack/config.yaml
@@ -35,8 +35,8 @@ params:
             default: Licensed under CC BY-NC-SA 4.0
 
     comments:
-        enabled: false
-        provider: disqus
+        enabled: true
+        provider: "waline"
 
         disqusjs:
             shortname:
@@ -65,9 +65,9 @@ params:
 
         # Waline client configuration see: https://waline.js.org/en/reference/client.html
         waline:
-            serverURL:
-            lang:
-            visitor:
+            serverURL: https://comments.alecareuticec.top/
+            lang: 
+            visitor: 
             avatar:
             emoji:
                 - https://cdn.jsdelivr.net/gh/walinejs/emojis/weibo
